Fix color picker and sort css readability

--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@ body {
     background-color: rgba(175, 255, 231, 1);
 }
 
+
+.column {
+    width: 256px;
+    height: 256px;
+    user-select: none;
+}
+
 .gridContainer {
     background-color: rgb(255, 255, 255);
 }
@@ -18,16 +25,14 @@ body {
     border: 1px black solid;
 }
 
+.mainContainer {
+    display: flex;
+    align-items: center;
+}
+
 .row {
     display: flex;
     justify-content: center;
-}
-
-.column {
-    /* background-color: rgba(255, 255, 255, 1); */
-    width: 256px;
-    height: 256px;
-    user-select: none;
 }
 
 .sliderContainer {
@@ -37,7 +42,8 @@ body {
     flex-direction: column;
 }
 
-.mainContainer {
+.title {
     display: flex;
+    justify-content: center;
     align-items: center;
 }
